# vscode-copilot-template

./: .gitignore  LICENSE  README.md
.continue/: README.md  config.json  config.yaml
.github/: copilot-instructions.md
.github/chatmodes/: dev-session-mode.md  doc-mode.md  llm-mode.md  project-review-mode.md  repo-mode.md  review-mode.md  task-mode.md
docs/guides/: cache-task-snippet.md
scripts/utilities/: databricks-proxy.py  scaffold-project.py
sessions/: dev-sessions.md.stub
tasks/: task-0-repo-setup.md  tasks.md
tasks/templates/: task-template.md
templates/projects/python/: README.md  pyproject.toml
templates/projects/python/src/__package__/: cli.py
templates/projects/terraform/: README.md
templates/projects/terraform/infra/: main.tf
