[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{PY_PACKAGE}}"
version = "0.0.1"
description = "{{PROJECT_NAME}}"
authors = [{ name = "", email = "" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
  "mypy>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
